# SimpleStruct

./: .gitignore  .gitmodules  other.npy  pyproject.toml  ref.npy  requirements  requirements-optional  setup.py
examples/: pointcloud.ipynb  segmentation.dcm
filters/: get_edge_of_mask.py  get_edge_of_structure.py
metrics/exotic/: added_path_length.py
metrics/overlap/: dice.py
set_filters/: generate_median_structure.py  resample_structures_to_common_origin.py
simplestruct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
simplestruct/metrics/distance/: hd.py  plastimatch_hd.py
simplestruct/metrics/exotic/: added_path_length.py  surface_dice.py
simplestruct/metrics/overlap/: __init__.py  dice.py
simplestruct/models/: __init__.py  structure_set.py
simplestruct/multi_filters/: hausdorff_map.py  hausdorff_maps.py
simplestruct/multi_filters/tests/: test_hausdorff_map.py
simplestruct/single_filters/: __init__.py  edge_generator.py  get_edge_of_structure.py  isometric_expand_shrink.py
simplestruct/structure_set/: structure_set.py
simplestruct/structure_set/dicom/: converter.py  parser.py
src/: __init__.py
src/simplestruct/: __init__.py
src/simplestruct/filters/: __init__.py  edge_generator.py  generate_median_structure.py  hausdorff_maps.py  isometric_expand_shrink.py  merging_structures.py  resample_structures_to_common_origin.py
src/simplestruct/metrics/: dice.py  (+7 more)
structure_set/: converter.py  parser.py  structure_set.py  utils.py
structure_set/dicom/: converter.py  misc.py
structure_set/tests/: test_converter.py
tests/: test_added_path_length.py  test_axis_diff.py  test_descriptive_stats.py  test_hausdorff_map.py  test_hd.py  test_surface_dice.py  utils.py
(+8 files in other folders)
