[project]
name = "simplestruct"
version = "0.1"
requires-python = ">=3.8"
description = "Working with segmentations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mathis Rasmussen", email = "mathis.rasmussen@rm.dk"},
    { name = "DCPT" }
]
classifiers = []
keywords = []

[project.urls]
homepage = "https://github.com/Aarhus-RadOnc-AI/SimpleStruct"
repository = "https://github.com/Aarhus-RadOnc-AI/SimpleStruct"

[build-system]
requires = [
    "setuptools @ git+https://github.com/pypa/setuptools.git@main",
]

dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements"] }
optional-dependencies.fast = { file = ["requirements-optional"] }